[package]
name = "sdfu"
version = "0.1.2"
authors = ["Gray Olson <gray@grayolson.com>"]
description = "Signed Distance Field (Function) Utilities. Contains functions for creating, combining, modifying, and using analytic SDFs for computer graphics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/termhn/sdfu"
readme = "README.md"
edition = "2018"

[dependencies]
vek = { version="0.9", optional=true }
nalgebra = { version="0.18", optional=true }
# ultraviolet = { version="0.2.0-alpha6", optional=true }
ultraviolet = { path="../ultraviolet", version="0.2.0-alpha6", optional=true }
