[package]
name = "sdfu"
version = "0.3.1-alpha.0"
authors = ["Gray Olson <gray@grayolson.com>"]
description = "Signed Distance Field (Function) Utilities. Contains functions for creating, combining, modifying, and using analytic SDFs for computer graphics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/termhn/sdfu"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
vek = { version = "0.14", optional = true }
nalgebra = { version = "0.24", optional = true }
ultraviolet = { version = "0.4", optional = true }
# ultraviolet = { path = "../ultraviolet", optional=true }

[dev-dependencies]
vek = "0.14"
nalgebra = "0.24"
ultraviolet = "0.4"
